--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 .bg-image {
-  background-image: url('bg-image.jpeg');
+  background-image: url('../images/bg-image.jpeg');
   background-size: cover;
   background-position: center;
 }
